--- a/Afrinet.Web/Pages/FetchBranch.razor
+++ b/Afrinet.Web/Pages/FetchBranch.razor
@@ -2,10 +2,10 @@
 @using Afrinet.Models
 @inject HttpClient Http
 
-<h1>Head Offices</h1>
+<h1>@ho.CompanyName Branches</h1>
 <div class="row">
     <div class="col-md-6">
-        <a href='/branch/add/' class="btn btn-primary" role="button">
+        <a href='/branch/add/@HeadOfficeId' class="btn btn-primary" role="button">
             <i class="fas fa-user-plus"></i>
             Add Branch
         </a>
@@ -30,49 +30,52 @@
 }
 else
 {
-    <table class="table table-striped align-middle table-bordered">
-    <thead class="table-success">
-        <tr>
-            <th>Branch Name</th>
-            <th>Contact Surname</th>
-            <th>Contact Other Names</th>
-            <th>Contact E-mail</th>
-            <th>Contact Phone</th>
-            <th>Actions</th>
+    if (branchList.Count != 0)
+    {
+        <table class="table table-striped align-middle table-bordered">
+        <thead class="table-success">
+            <tr>
+                <th>Branch Name</th>
+                <th>Contact Surname</th>
+                <th>Contact Other Names</th>
+                <th>Contact E-mail</th>
+                <th>Contact Phone</th>
+                <th>Actions</th>
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var br in branchList)
-            {
-                <tr>
-                    <td>@br.BranchName</td>
-                    <td>@br.MainContactName</td>
-                    <td>@br.MainContactOtherNames</td>
-                    <td>@br.MainContactEmail</td>
-                    <td>@br.MainContactMobileNumber</td>
+            </tr>
+        </thead>
+             <tbody>
+                @foreach (var br in branchList)
+                {
+                    <tr>
+                        <td>@br.BranchName</td>
+                        <td>@br.MainContactName</td>
+                        <td>@br.MainContactOtherNames</td>
+                        <td>@br.MainContactEmail</td>
+                        <td>@br.MainContactMobileNumber</td>
 
-                    <td>
-                        <a href='/branch/edit/@br.HeadOfficeId/@br.Id' class="btn btn-outline-dark" role="button">
-                            Edit
-                        </a>
-                      @*   <a href='/headoffice/delete/@ho.Id' class="btn btn-outline-danger" role="button">
-                            Delete
-                        </a> *@
-                        <a href='/agent/@br.Id' class="btn btn-outline-dark" role="button">
-                            View Agents
-                        </a>
-                    </td>
-                </tr>
-            }
-        </tbody>
+                        <td>
+                            <a href='/branch/edit/@br.HeadOfficeId/@br.Id' class="btn btn-outline-dark" role="button">
+                                Edit
+                            </a>
+                            
+                            <a href='/agent/@br.Id' class="btn btn-outline-dark" role="button">
+                                View Agents
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
 
-    </table>
+        </table>
+    }
 }
 
 @code {
     [Parameter]
     public string? HeadOfficeId { get; set; }
+
+    protected HeadOffice ho = new();
     protected List<Branch> branchList = new();
     protected List<Branch> searchBranchData = new();
     protected Branch branch = new();
@@ -81,18 +84,19 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        ho = await Http.GetFromJsonAsync<HeadOffice>("http://localhost:5032/api/HeadOffice/" + HeadOfficeId);
         await GetBranch();
     }
     protected async Task GetBranch()
     {
-        branchList = await Http.GetFromJsonAsync<List<Branch>>("http://localhost:5032/api/Branch/" + HeadOfficeId );
+        branchList = await Http.GetFromJsonAsync<List<Branch>>("http://localhost:5032/api/Branch/" + HeadOfficeId);
         searchBranchData = branchList;
     }
     protected void FilterBranch()
     {
         if (!string.IsNullOrEmpty(SearchString))
         {
-            branchList= searchBranchData
+            branchList = searchBranchData
             .Where(x => x.BranchName.IndexOf(SearchString, StringComparison.OrdinalIgnoreCase) != -1)
             .ToList();
         }
