--- a/Afrinet.Web/Pages/FetchHeadOffice.razor
+++ b/Afrinet.Web/Pages/FetchHeadOffice.razor
@@ -55,7 +55,7 @@ else
                     <td>@ho.MainContactOtherNames</td>
                     <td>@ho.MainContactEmail</td>
                     <td>@ho.MainContactMobileNumber</td>
-                    <td>@ho.ContractSignatoryOtherNames.</td>
+                    <td>@ho.ContractSignatoryName</td>
                     <td>@ho.ContractSignatoryOtherNames</td>
                     <td>@ho.ContractSignatoryEmail</td>
                     <td>@ho.ContractSignatoryMobileNumber</td>
