--- a/Afrinet.Web/Shared/NavMenu.razor
+++ b/Afrinet.Web/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
         </div>
           <div class="nav-item px-3">
             <NavLink class="nav-link" href="headoffice">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Head Offices
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Agency Networks
             </NavLink>
         </div>
     </nav>
