--- a/Afrinet.Web/Pages/FetchHeadOffice.razor
+++ b/Afrinet.Web/Pages/FetchHeadOffice.razor
@@ -1,6 +1,7 @@
 ﻿@page "/headoffice"
 @using Afrinet.Models
 @inject HttpClient Http
+@attribute [Authorize]
 
 <h1>Head Offices</h1>
 <div class="row">
