--- a/Afrinet.Web/Pages/Index.razor
+++ b/Afrinet.Web/Pages/Index.razor
@@ -1,9 +1,33 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+@attribute [Authorize]
 
-<h1>Hello, world!</h1>
+<PageTitle>Home</PageTitle>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+Welcome to Mobile Money Platform GUI. 
+<br>
+@Username
+
+
+@code { 
+  private string Username = "Anonymous User";
+  private string Picture = "";
+  [CascadingParameter]
+  private Task<AuthenticationState>? authenticationState { get; set; }
+  protected override async Task OnInitializedAsync()
+  {
+    if (authenticationState is not null)
+    {
+      var state = await authenticationState;
+
+      Username = state?.User?.Identity?.Name?? string.Empty;
+
+      Picture = state?.User.Claims
+                  .Where(c => c.Type.Equals("picture"))
+                  .Select(c => c.Value)
+                  .FirstOrDefault() ?? string.Empty;
+    }
+    await base.OnInitializedAsync();
+  }
+}
