Added Organisation Creation with User Credentials  - Auth0

--- a/Afrinet.Web/Pages/AddAgents.razor
+++ b/Afrinet.Web/Pages/AddAgents.razor
@@ -76,10 +76,14 @@
     </div>
 
     <div class="mb-3">
-        <RadzenLabel Text="Identification Type" Component="IdentificationDrowpdown" />
+      <label for="Address" class="form-label">Identification Type</label>
         <div class="col-md-4">
-            <RadzenDropDown TValue="string" Name="IdentificationDrowpdown" @bind-Value="agentAccount.IDType"
-                Data=@identityTypes />
+            <MudSelect T="string" Label="" AnchorOrigin="Origin.CenterCenter" @bind-Value="agentAccount.IDType">
+                @foreach (var id in identityTypes)
+                {
+                    <MudSelectItem Value="@id" />
+                }
+            </MudSelect>
         </div>
         <ValidationMessage For="@(() => agentAccount.IDType)" />
     </div>
