--- a/Afrinet.Web/Pages/FetchHeadOffice.razor
+++ b/Afrinet.Web/Pages/FetchHeadOffice.razor
@@ -34,7 +34,7 @@ else
     <table class="table table-striped align-middle table-bordered">
     <thead class="table-success">
         <tr>
-            <th>Companny Name</th>
+            <th>Company Name</th>
             <th>Contact Surname</th>
             <th>Contact Other Names</th>
             <th>Contact E-mail</th>
