--- a/Afrinet.Web/Shared/NavMenu.razor
+++ b/Afrinet.Web/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </div>
+         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="organisation">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Merchants and Other Organisations
+            </NavLink>
+        </div>
     </nav>
 </div>
 
