--- a/Afrinet.Web/Shared/MainLayout.razor
+++ b/Afrinet.Web/Shared/MainLayout.razor
@@ -12,7 +12,15 @@
                 <NavMenu />
             </div>
         </Authorized>
+        <NotAuthorized>
+
+            <head>
+
+            </head>
+        </NotAuthorized>
+
     </AuthorizeView>
+
 
 
     <main>
